--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,8 +1,8 @@
 ################## DataSource Configuration ##########################
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://csye6225-fall2017.ckgcxfjytgoc.us-east-1.rds.amazonaws.com:3306/csye6225
-spring.datasource.username=csye6225master
-spring.datasource.password=csye6225password
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://csye6225-fall2017.ckgcxfjytgoc.us-east-1.rds.amazonaws.com:3306/csye6225
+#spring.datasource.username=csye6225master
+#spring.datasource.password=csye6225password
 cloud.aws.stack.auto=false
 
 jsa.aws.access_key_id=AKIAJF32P2PDBB47WTHA
