--- a/infrastructure/aws/cloudformation/create-ec2-stack.yml
+++ b/infrastructure/aws/cloudformation/create-ec2-stack.yml
@@ -234,26 +234,100 @@ Resources:
               Ref: VolumeSize
       UserData:
         Fn::Base64: !Sub |
-            #!/bin/bash
-            export DEBIAN_FRONTEND=noninteractive
-            apt-get -y install ruby
-            apt-get install wget
-            wget https://aws-codedeploy-us-east-2.s3.amazonaws.com/latest/install
-            chmod -R 777 /home/ubuntu/install
-            cd /home/ubuntu
-            ./install auto
-            service codedeploy-agent start
-            sleep 10
-            echo '#!/bin/sh' > /opt/tomcat/bin/setenv.sh
-            echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.url=jdbc:mysql://${RDSInstance.Endpoint.Address}:3306/csye6225"' >> /opt/tomcat/bin/setenv.sh
-            echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.username=${DBUser}"' >> /opt/tomcat/bin/setenv.sh
-            echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.password=${DBPassword}"' >> /opt/tomcat/bin/setenv.sh
+                    #! /bin/bash -xe
+                    export DEBIAN_FRONTEND=noninteractive
+                    apt-get update
+                    echo Y | apt-get install default-jre
+                    echo Y | apt-get install default-jdk
 
-            sleep 3
-            chmod -R 755 /opt/tomcat/bin/setenv.sh
-            chown tomcat:tomcat /opt/tomcat/bin/setenv.sh
-            source /opt/tomcat/bin/setenv.sh
-            sleep 3
+                    sed -i '$ a JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"' /etc/environment
+                    source /etc/environment
+                    wait
+                    sleep 3
+                    groupadd tomcat
+                    useradd -s /bin/false -g tomcat -d /opt/tomcat tomcat
+
+                    cd /opt
+                    curl -O http://apache.mirrors.tds.net/tomcat/tomcat-8/v8.5.23/bin/apache-tomcat-8.5.23.tar.gz
+                    tar -xvf apache-tomcat-8.5.23.tar.gz
+                    mv apache-tomcat-8.5.23 tomcat
+
+                    sleep 3
+
+                    chgrp -R tomcat /opt/tomcat
+                    chown -R tomcat /opt/tomcat
+                    chmod -R 755 /opt/tomcat
+
+                    echo "[Unit]
+                    Description=Apache Tomcat Web Server
+                    After=network.target
+
+                    [Service]
+                    Type=forking
+
+                    Environment=CATALINA_PID=/opt/tomcat/temp/tomcat.pid
+                    Environment=CATALINA_HOME=/opt/tomcat
+                    Environment=CATALINA_BASE=/opt/tomcat
+                    Environment='JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom'
+
+                    ExecStart=/opt/tomcat/bin/startup.sh
+                    ExecStop=/opt/tomcat/bin/shutdown.sh
+
+                    User=tomcat
+                    Group=tomcat
+                    UMask=0007
+                    RestartSec=15
+                    Restart=always
+
+                    [Install]
+                    WantedBy=multi-user.target" > /etc/systemd/system/tomcat.service
+
+                    systemctl daemon-reload
+                    sleep 2
+                    systemctl start tomcat
+                    sleep 2
+                    systemctl enable tomcat
+                    sudo ufw allow 8080
+
+                    sleep 10
+                    wait
+
+                    apt-get update
+                    echo Y | apt-get install ruby
+                    apt-get install wget
+                    cd /home/ubuntu
+                    wget https://aws-codedeploy-us-east-2.s3.amazonaws.com/latest/install
+                    chmod -R 777 /home/ubuntu/install
+                    wait
+                    sleep 3
+                    ./install auto
+                    service codedeploy-agent start
+                    sleep 10
+
+                    echo '#!/bin/sh' > /opt/tomcat/bin/setenv.sh
+                    echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.url=jdbc:mysql://${RDSInstance.Endpoint.Address}:3306/csye6225"' >> /opt/tomcat/bin/setenv.sh
+                    echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.username=${DBUser}"' >> /opt/tomcat/bin/setenv.sh
+                    echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.password=${DBPassword}"' >> /opt/tomcat/bin/setenv.sh
+                    echo 'export JAVA_OPTS' >> /opt/tomcat/bin/setenv.sh
+
+                    sleep 3
+                    chmod -R 755 /opt/tomcat/bin/setenv.sh
+                    chown tomcat:tomcat /opt/tomcat/bin/setenv.sh
+                    source /opt/tomcat/bin/setenv.sh
+                    sleep 3
+                    systemctl restart tomcat
+
+        # S3 bucket
+          S3Bucket:
+            Type: AWS::S3::Bucket
+            Properties:
+              BucketName: !Join ["." , [!Ref DomainName, "csye6225.com"]]
+              AccessControl: Private
+
+        # DynamoDB Table
+          DynamoDBTable:
+            Type: "AWS::DynamoDB::Table"
+
 
 # S3 bucket
   S3Bucket:
