--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,3 +1,8 @@
 ################## DataSource Configuration ##########################
+#-Dspring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/csye6225
+#spring.datasource.username=root
+#spring.datasource.password=password
+
 
 cloud.aws.stack.auto=false
