--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,7 +1,7 @@
 ################## DataSource Configuration ##########################
-spring.datasource.url=jdbc:mysql://localhost:3306/csye6225
-spring.datasource.username=root
-spring.datasource.password=password
+-Dspring.datasource.url=jdbc:mysql://localhost:3306/csye6225
+-Dspring.datasource.username=rootq3
+-Dspring.datasource.password=password12
 
 
 cloud.aws.stack.auto=false
