--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,7 +1,7 @@
 ################## DataSource Configuration ##########################
--Dspring.datasource.url=jdbc:mysql://localhost:3306/csye6225
--Dspring.datasource.username=rootq3
--Dspring.datasource.password=password12
+spring.datasource.url=jdbc:mysql://localhost:3306/csye6225
+spring.datasource.username=rootq3
+spring.datasource.password=password12
 
 
 cloud.aws.stack.auto=false
