--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -2,6 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/csye6225
 spring.datasource.username=rootq3
 spring.datasource.password=password12
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 
 cloud.aws.stack.auto=false
