--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -4,11 +4,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/csye6225
 spring.datasource.username=willbereplaced
 spring.datasource.password=anyjunktooverwrite
 cloud.aws.stack.auto=false
+spring.datasource.access_key=dummy
+spring.datasource.secret_key=dummypassword
 
 #jsa.aws.access_key_id=AKIAJF32P2PDBB47WTHA
 #jsa.aws.secret_access_key=ScVQBUwJmxtDWbb9NCGQii0FVfPjK/Wai9yLy01
 #jsa.s3.bucket=ec2.csye6225-fall2017-guptarite.me.csye6225.com
-#jsa.s3.region=us-east-1
+spring.datasource.region=us-east-1
 
 ##jsa.s3.uploadfile=/home/ritesh/U.txt
 ##jsa.s3.key=jsa-s3-upload-file.txt
