--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -7,8 +7,8 @@ cloud.aws.stack.auto=false
 #spring.datasource.name=access_key
 #spring.datasource.passworddummypassword
 
-spring.datasource.access_key_id=dumb
-spring.datasource.secret_access_key=dumb
+AWS_ACCESS_KEY_ID=dumb
+AWS_SECRET_KEY=dumb
 #jsa.s3.bucket=ec2.csye6225-fall2017-guptarite.me.csye6225.com
 #spring.datasource.region=alele
 
