--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -6,8 +6,8 @@ spring.datasource.password=anyjunktooverwrite
 cloud.aws.stack.auto=false
 #spring.datasource.name=access_key
 #spring.datasource.passworddummypassword
-spring.datasource.AWS_ACCESS_KEY_ID=dumb
-spring.datasource.AWS_SECRET_KEY=dumb
+aws.ACCESS_KEY_ID=dumb
+aws.SECRET_ACCESS_KEY=dumb
 #jsa.s3.bucket=ec2.csye6225-fall2017-guptarite.me.csye6225.com
 #spring.datasource.region=alele
 
