--- a/appspec.yml
+++ b/appspec.yml
@@ -7,10 +7,10 @@ files:
   - source: ./restartTomcat.sh
     destination: /home/ubuntu
   - source: ./build/libs/ROOT.war
-    destination: /var/lib/tomcat8/webapps
+    destination: /opt/tomcat/webapps
 
 hooks:
   AfterInstall:
    - location: ./restartTomcat.sh
      timeout: 180
-     runas: ubuntu
+runas: ubuntu
