--- a/infrastructure/aws/cloudformation/create-ec2-stack.yml
+++ b/infrastructure/aws/cloudformation/create-ec2-stack.yml
@@ -129,6 +129,12 @@ Parameters:
   DNSTtl:
     Description: Name of the active stack that has roles created
     Type: "String"
+  IAMAccessKey:
+    Description: Name of the active stack that has roles created
+    Type: "String"
+  IAMSecretKey:
+    Description: Name of the active stack that has roles created
+    Type: "String"
 
 Resources:
 # VPC Security Group for EC2 instance
@@ -153,6 +159,11 @@ Resources:
           FromPort: '443'
           ToPort: '443'
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: '8080'
+          ToPort: '8080'
+          CidrIp: 0.0.0.0/0
+
 
 # VPC Security Group for RDS instance
   RDSSecurityGroup:
@@ -187,12 +198,12 @@ Resources:
       DBInstanceClass: !Ref DBInstanceClass
       Engine: !Ref DatabaseType
       EngineVersion: !Ref DatabaseVersion
+      PubliclyAccessible: false
       StorageType: !Ref DBStorageType
       DBSubnetGroupName: !Ref DBSubnetGroup
       DBInstanceIdentifier: !Ref InstanceIdentifier
       MasterUsername: !Ref DBUser
       MasterUserPassword: !Ref DBPassword
-      PubliclyAccessible: false
       MultiAZ: false
       VPCSecurityGroups:
       - Ref: RDSSecurityGroup
@@ -235,10 +246,61 @@ Resources:
       UserData:
         Fn::Base64: !Sub |
             #! /bin/bash -xe
-            export DEBIAN_FRONTEND=noninteractive
-            apt-get update && apt-get upgrade -y
-            apt-get -y install tomcat8
+            apt-get update
+            echo Y | apt-get install default-jre
+            echo Y | apt-get install default-jdk
 
+            sed -i '$ a JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"' /etc/environment
+            source /etc/environment
+            wait
+            sleep 3
+            groupadd tomcat
+            useradd -s /bin/false -g tomcat -d /opt/tomcat tomcat
+
+            cd /opt
+            curl -O http://apache.mirrors.tds.net/tomcat/tomcat-8/v8.5.23/bin/apache-tomcat-8.5.23.tar.gz
+            tar -xvf apache-tomcat-8.5.23.tar.gz
+            mv apache-tomcat-8.5.23 tomcat
+
+            sleep 3
+
+            chgrp -R tomcat /opt/tomcat
+            chown -R tomcat /opt/tomcat
+            chmod -R 755 /opt/tomcat
+
+            echo "[Unit]
+            Description=Apache Tomcat Web Server
+            After=network.target
+
+            [Service]
+            Type=forking
+
+            Environment=CATALINA_PID=/opt/tomcat/temp/tomcat.pid
+            Environment=CATALINA_HOME=/opt/tomcat
+            Environment=CATALINA_BASE=/opt/tomcat
+            Environment='JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom'
+
+            ExecStart=/opt/tomcat/bin/startup.sh
+            ExecStop=/opt/tomcat/bin/shutdown.sh
+
+            User=tomcat
+            Group=tomcat
+            UMask=0007
+            RestartSec=15
+            Restart=always
+
+            [Install]
+            WantedBy=multi-user.target" > /etc/systemd/system/tomcat.service
+
+            systemctl daemon-reload
+            sleep 2
+            systemctl start tomcat
+            sleep 2
+            systemctl enable tomcat
+            sudo ufw allow 8080
+
+            sleep 10
+            wait
 
             apt-get update
             echo Y | apt-get install ruby
@@ -252,16 +314,21 @@ Resources:
             service codedeploy-agent start
             sleep 10
 
-            echo '#!/bin/sh' > /usr/share/tomcat8/bin/setenv.sh
-            echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.url=jdbc:mysql://${RDSInstance.Endpoint.Address}:3306/csye6225"' >> /usr/share/tomcat8/bin/setenv.sh
-            echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.username=${DBUser}"' >> /usr/share/tomcat8/bin/setenv.sh
-            echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.password=${DBPassword}"' >> /usr/share/tomcat8/bin/setenv.sh
+            echo '#!/bin/sh' > /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dsping.profiles.active=aws"'
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dspring.datasource.url=jdbc:mysql://${RDSInstance.Endpoint.Address}:3306/csye6225"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dspring.datasource.username=${DBUser}"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dspring.datasource.password=${DBPassword}"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Daws.AWS_ACCESS_KEY_ID=${IAMAccessKey}"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Daws.AWS_SERECT_ACCESS_KEY=${IAMSecretKey}"' >> /opt/tomcat/bin/setenv.sh
 
             sleep 3
-            chmod -R 755 /usr/share/tomcat8/bin/setenv.sh
-            chown tomcat:tomcat /usr/share/tomcat8/bin/setenv.sh
-            source /usr/share/tomcat8/bin/setenv.sh
-            sleep 3
+            chmod -R 755 /opt/tomcat/bin/setenv.sh
+            chown tomcat:tomcat /opt/tomcat/bin/setenv.sh
+            source /opt/tomcat/bin/setenv.sh
+            sleep 10
+            systemctl restart tomcat
+
 
 # S3 bucket
   S3Bucket:
