--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,14 +1,15 @@
 ################## DataSource Configuration ##########################
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://csye6225-fall2017.ckgcxfjytgoc.us-east-1.rds.amazonaws.com:3306/csye6225
-spring.datasource.username=csye6225master
-spring.datasource.password=csye6225password
+spring.datasource.url=jdbc:mysql://localhost:3306/csye6225
+spring.datasource.username=willbereplaced
+spring.datasource.password=anyjunktooverwrite
 cloud.aws.stack.auto=false
+#spring.datasource.name=access_key
+#spring.datasource.passworddummypassword
+aws.AWS_ACCESS_KEY_ID=dumb
+aws.AWS_SECRET_ACCESS_KEY=dumb
+#jsa.s3.bucket=ec2.csye6225-fall2017-guptarite.me.csye6225.com
+#spring.datasource.region=alele
 
-jsa.aws.access_key_id=AKIAID54JQND42DMYGNQ
-jsa.aws.secret_access_key=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
-jsa.s3.bucket=ec2.csye6225-fall2017-shettypr.me.csye6225.com
-jsa.s3.region=us-east-1
-
-##jsa.s3.uploadfile=/home/ritesh/U.txt
+#jsa.s3.uploadfile=/home/ritesh/U.txt
 ##jsa.s3.key=jsa-s3-upload-file.txt
